tests/snapshots/contract_snapshots__api_error_basic.snap
---
source: tests/contract_snapshots.rs
expression: resp
---
{
  "success": false,
  "data": null,
  "message": null,
  "error": "something went wrong"
}
