tests/snapshots/contract_snapshots__api_error_with_validation.snap
---
source: tests/contract_snapshots.rs
expression: resp
---
{
  "success": false,
  "data": null,
  "message": null,
  "error": "validation failed",
  "validation_errors": [
    {
      "field": "email",
      "message": "invalid format"
    },
    {
      "field": "password",
      "message": "too short"
    }
  ]
}
