tests/snapshots/contract_snapshots__api_success_basic.snap
---
source: tests/contract_snapshots.rs
expression: resp
---
{
  "success": true,
  "data": {
    "foo": "bar",
    "num": 123
  },
  "message": null,
  "error": null
}
