tests/snapshots/contract_snapshots__api_success_with_message.snap
---
source: tests/contract_snapshots.rs
expression: resp
---
{
  "success": true,
  "data": {
    "ok": true
  },
  "message": "done",
  "error": null
}
